[package]
name = "naviadmin"
version = "0.1.0"
edition = "2021"
default-run = "naviadmin-service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.0-beta.4"
actix-rt = "2.6.0"
actix-web = "4.0.0-rc.2"
actix-multipart = "0.4"
chrono = {version = "0.4.19", features = ["serde"]}
dotenv = "0.15.0"
futures-util = { version = "0.3.21", default-features = false, features = ["std"] }
openssl = {version = "0.10.38", features = ["vendored"]}
serde = { version = "1.0.132", features = ["derive"]}
mysql ="17.0.0"
mysql_common ="0.20.0"
log = "0.4.8"
log4rs = "0.10.0"
sanitize-filename = "0.3"
uuid = { version = "0.8", features = ["v4"] }

[[bin]]
name = "naviadmin-service"
